[add]Linux 常见文件处理更新

--- a/docs/linux/kitty/常见问题及解决.md
+++ b/docs/linux/kitty/常见问题及解决.md
@@ -1,5 +1,6 @@
 + scp 上次文件(bash: line 1: scp: command not found)
-  >服务器未安装
+  > 服务器未安装
+
   ```shell
   # debian
   sudo apt-get install openssh-client
@@ -8,10 +9,71 @@
   ```
 
 + vi/vim 使用不了
-  >vi/vim未安装
+  > vi/vim未安装
+
   ```shell
   # debian
   sudo apt-get install vim
   # alpine 
   apk add vim
+  ```
+
++ 自启动
+  > 添加开机自启
+
+  ```shell
+  # debian
+  # 方式一,末尾添加脚本
+  vi ~/.bashrc
+  # 方式二,末尾添加脚本
+  vi /etc/profile
+  
+  # alpine
+  # 方式一,
+  rc-update add /usr/src/WebFile defualt
+  # 删除
+  rc-update delete /usr/src/WebFile defualt
+  
+  # 方式二
+  
+  ```
+
++ Alpine 添加自启(rc-update not found)
+  > [openrc](https://docs.alpinelinux.org/user-handbook/0.1a/Working/openrc.html) 未安装
+
+  ```shell
+  apk install openrc --no-cache
+  
+  # 列出所有服务
+  rc-service --list
+  # 启动/停止/重启 服务
+  rc-service 服务名称 start/stop/restart
+  # 更新服务设置
+  rc-update add/show/delete 服务
+  ```
+
++ ps [-bash: ps: command not found]
+  > procps 未安装
+
+  ```shell
+  apt-get install procps
+  # 失败,update 再intall
+  apt-get update 
+  ```
+  
++ 时区修改
+  ```shell
+  # debian
+  dpkg-reconfigure tzdata
+  # 然后选择【 6. Asia】next,【70. Shanghai】,完成。
+  
+  # alpine
+  # 添加tzdata
+  apk add tzdata
+  # 复制时区文件
+  cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+  # 指定时区
+  echo "Asia/Shanghai" >  /etc/timezone
+  # 删除tzdata
+  apk del tzdata
   ```
