--- a/docs/other/search/搜索引擎使用技巧.md
+++ b/docs/other/search/搜索引擎使用技巧.md
@@ -32,6 +32,7 @@
 
 + [OpenAI](https://chat.openai.com/)，OpenAI
 + [Ara.AI](https://ora.ai/)，OpenAI
++ [bard](https://bard.google.com/),Google Bard
 + [Canva](https://www.canva.com/)，专业设计，影|视|图|文...
 + [得到](https://www.dedao.cn/)，学习网站
 + [alternativeto](https://alternativeto.net/)，查询同类软件工具网站，如网站搜索`related:内容`
