--- a/docs/other/shortcut/快捷方式.md
+++ b/docs/other/shortcut/快捷方式.md
@@ -1,8 +1,10 @@
 ### 快捷方式
 
 ### ChatGpt
-* [ora](https://ora.ai)
-* [bing](https://bing.com)
+* [Ora](https://ora.ai)
+* [Bing](https://bing.com)
+* [ChatGPT](https://chat.openai.com/)
+* [Gemini(曾今Bard)](https://gemini.google.com)
 
 
 ### Emoji表情
